--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:text="@string/facebook_login_string"
         android:drawableStart="@drawable/fb_button"
         android:textColor="#ffffff"
-        android:background="#3b5998"
+        android:background="@drawable/fb_button_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
