--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -14,7 +14,10 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/content_frame"/>
+            android:id="@+id/content_frame"
+            android:layout_gravity="center"/>
+
+
 
     </LinearLayout>
 
@@ -24,7 +27,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+
         app:headerLayout="@layout/nav_header_home"
+        app:itemTextColor="@color/colorPrimary"
+
         app:menu="@menu/activity_home_drawer">
 
     </android.support.design.widget.NavigationView>
