--- a/app/src/main/res/layout/activity_createtrip.xml
+++ b/app/src/main/res/layout/activity_createtrip.xml
@@ -1,36 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="5"
-        android:layout_marginTop="50dp"
-        android:id="@+id/crtrip">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="3"
-            android:hint="Trip Name" />
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:background="@color/colorPrimaryDark"
+        android:gravity="center">
+        <LinearLayout
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animation_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:lottie_fileName="viewTrip.json"
+                app:lottie_loop="true"
+                app:lottie_colorFilter="@color/colorAccent"
+                android:layout_gravity="center"
+                app:lottie_autoPlay="true" />
+
+            <!--<TextView-->
+                <!--android:textAlignment="center"-->
+                <!--android:layout_marginTop="2dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_weight="5"-->
+                <!--android:text="Create Trips"-->
+                <!--/>-->
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+
+            android:layout_marginTop="50dp"
+            android:id="@+id/crtrip">
+
+
+
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1"/>-->
+            <EditText
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:maxLength="25"
+                android:layout_height="wrap_content"
+                android:hint="Trip Name" />
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1"/>-->
+        </LinearLayout>
+        <Button
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="100dp"
+            android:textColor="@color/colorAccent"
+            android:text="Start Trip"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/crtrip"
+
+            />
+
+
     </LinearLayout>
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="Start Trip"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/crtrip"
-        android:layout_marginRight="20dp"
-        />
+
+
+
 
 </RelativeLayout>
