--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -34,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/header_cover_image"
-            android:background="#0eaeff"
+            android:background="@color/colorPrimary"
             android:elevation="4dp"
             android:paddingBottom="24dp">
 
@@ -62,9 +63,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+
                 android:layout_marginTop="76dp"
                 android:text="Chaitya Shah"
-                android:textColor="#fff"
+                android:textColor="@color/colorAccent"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -76,7 +78,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
                 android:text="Born at a very young age"
-                android:textColor="#fff"
+
+                android:textColor="@color/colorAccent"
                 android:textSize="14sp" />
         </RelativeLayout>
 
@@ -87,7 +90,7 @@
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="20dp"
                android:gravity="center"
-               android:orientation="horizontal"
+               android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
@@ -116,6 +119,7 @@
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
+                           android:textColor="@color/colorAccent"
                            android:text="5 forks" />
                    </LinearLayout>
 
@@ -137,15 +141,43 @@
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
-
+                           android:textColor="@color/colorAccent"
                            android:text="5 Stars"/>
+                   </LinearLayout>
+
+               </LinearLayout>
+
+               <LinearLayout
+                   android:orientation="vertical"
+                   android:gravity="center"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+                   <LinearLayout
+                       android:orientation="horizontal"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content">
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="match_parent"
+                           android:layout_gravity="center"
+                           android:textAlignment="center"
+                           android:textSize="@dimen/activity_horizontal_margin"
+                           android:textColor="@color/colorAccent"
+                           android:layout_weight="2"
+                           android:text="This is a dummy Trip"
+                           />
                    </LinearLayout>
 
                </LinearLayout>
 
 
 
+
+
            </LinearLayout>
+
+
 
 
 
