--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,5 +13,24 @@
         android:layout_height="match_parent"
         tools:context="io.github.chaitya62.tripsharr.MapsActivity"
         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@mipmap/ic_done_white_24dp"
+        android:id="@+id/done"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"/>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:src="@mipmap/ic_exit_to_app_white_24dp"
+        android:id="@+id/exitcr"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"/>
 </RelativeLayout>
 
