--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -6,20 +6,13 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout">
 
-    <LinearLayout
+
+    <include
+        layout="@layout/app_bar_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/content_frame"
-            android:layout_gravity="center"/>
+        android:layout_height="match_parent" />
 
 
-
-    </LinearLayout>
 
     <!--Second child layout-->
     <android.support.design.widget.NavigationView
@@ -27,10 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-
         app:headerLayout="@layout/nav_header_home"
         app:itemTextColor="@color/colorPrimary"
-
         app:menu="@menu/activity_home_drawer">
 
     </android.support.design.widget.NavigationView>
