--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,190 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+
+
+
+
+
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
-        <ImageView
-            android:id="@+id/header_cover_image"
+
+
+
+
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/colappsing_toolbar"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:scaleType="centerCrop"
-            android:contentDescription=""
-            android:src="@mipmap/ic_launcher" />
-        <ImageButton
-            android:id="@+id/user_profile_photo"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_below="@+id/header_cover_image"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="-60dp"
-            android:background="@drawable/profile_image_border"
-            android:elevation="5dp"
-            android:padding="20dp"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher_round" />
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:contentScrim="?attr/colorPrimary"
+            >
 
-        <RelativeLayout
-            android:id="@+id/profile_layout"
+
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:contentDescription="TEST IMAGE"
+                android:src="@drawable/images"
+                android:scaleType="centerCrop"
+                android:layout_gravity="start"
+                app:layout_collapseMode="parallax"
+                app:paddingStart="@dimen/activity_vertical_margin"
+                app:layout_collapseParallaxMultiplier="0.4"
+
+                />
+
+
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_collapseMode="pin"
+                app:layout_collapseParallaxMultiplier="0.6"
+                >
+
+            </android.support.v7.widget.Toolbar>
+
+
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+
+
+
+    </android.support.design.widget.AppBarLayout>
+
+
+
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:cardElevation="8dp"
+            app:contentPadding="16dp"
+            >
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/header_cover_image"
-            android:background="@color/colorPrimary"
-            android:elevation="4dp"
-            android:paddingBottom="24dp">
+            android:text ="@string/test"
+            />
 
-
-            <!--<ImageView-->
-                <!--android:id="@+id/add_friend"-->
-                <!--android:layout_width="30dp"-->
-                <!--android:layout_height="30dp"-->
-                <!--android:layout_marginLeft="16dp"-->
-                <!--android:layout_marginTop="16dp"-->
-                <!--android:layout_toLeftOf="@+id/drop_down_option_menu"-->
-                <!--android:src="@android:drawable/btn_star" />-->
-
-            <!--<ImageView-->
-                <!--android:id="@+id/drop_down_option_menu"-->
-                <!--android:layout_width="30dp"-->
-                <!--android:layout_height="30dp"-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:layout_marginLeft="16dp"-->
-                <!--android:layout_marginTop="16dp"-->
-                <!--android:src="@android:drawable/ic_menu_add" />-->
-
-            <TextView
-                android:id="@+id/user_profile_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-
-                android:layout_marginTop="76dp"
-                android:text="Chaitya Shah"
-                android:textColor="@color/colorAccent"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/user_profile_short_bio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/user_profile_name"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="12dp"
-                android:text="Born at a very young age"
-
-                android:textColor="@color/colorAccent"
-                android:textSize="14sp" />
-        </RelativeLayout>
-
-
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_below="@+id/profile_layout"
-               android:layout_marginTop="20dp"
-               android:gravity="center"
-               android:orientation="vertical"
-               >
-               <LinearLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_below="@+id/profile_layout"
-                   android:layout_marginTop="20dp"
-                   android:gravity="center"
-                   android:layout_gravity="top"
-                   android:orientation="horizontal">
-
-                   <LinearLayout
-                       android:layout_width="0dp"
-                       android:layout_height="wrap_content"
-                       android:layout_gravity="center"
-                       android:layout_weight="1"
-                       android:orientation="vertical">
-
-                       <ImageView
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_gravity="center"
-                           android:src="@android:drawable/btn_star" />
-
-                       <TextView
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:layout_gravity="center"
-                           android:gravity="center"
-                           android:textColor="@color/colorAccent"
-                           android:text="5 forks" />
-                   </LinearLayout>
-
-                   <LinearLayout
-                       android:layout_width="0dp"
-                       android:layout_height="wrap_content"
-                       android:layout_weight="1"
-                       android:gravity="center"
-                       android:orientation="vertical"
-                       android:layout_gravity="right">
-                       <ImageView
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_gravity="center"
-                           android:src="@android:drawable/btn_star"
-                           />
-                       <TextView
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:gravity="center"
-                           android:layout_gravity="center"
-                           android:textColor="@color/colorAccent"
-                           android:text="5 Stars"/>
-                   </LinearLayout>
-
-               </LinearLayout>
-
-               <LinearLayout
-                   android:orientation="vertical"
-                   android:gravity="center"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content">
-                   <LinearLayout
-                       android:orientation="horizontal"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content">
-
-                       <TextView
-                           android:layout_width="wrap_content"
-                           android:layout_height="match_parent"
-                           android:layout_gravity="center"
-                           android:textAlignment="center"
-                           android:textSize="@dimen/activity_horizontal_margin"
-                           android:textColor="@color/colorAccent"
-                           android:layout_weight="2"
-                           android:text="This is a dummy Trip"
-                           />
-                   </LinearLayout>
-
-               </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
 
 
 
-           </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 
 
 
 
-
-
-    </RelativeLayout>
-
-
-
-</ScrollView>
+</android.support.design.widget.CoordinatorLayout>
