--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -15,7 +15,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/content_frame"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/cardList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </FrameLayout>
 
 
 
