--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="host">http://tripshare.codeadventure.in/TripShare/</string>
+    <string name="host">http://192.168.0.103/TripSharr/</string>
 </resources>
