--- a/app/src/main/res/layout/trip_feed_card.xml
+++ b/app/src/main/res/layout/trip_feed_card.xml
@@ -1,6 +1,6 @@
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -13,25 +13,30 @@
         android:clickable="true"
         android:focusable="true"
         android:background="?android:attr/selectableItemBackground">
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/card_image"/>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/card_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_fileName="star.json"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true" />
+
+
         <TextView
             android:id="@+id/card_title"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#ffffff"
-            android:text="User Name"
+            android:text="Trip Name"
             android:gravity="center_horizontal"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            android:layout_toEndOf="@+id/card_image" />
+            android:layout_toEndOf="@id/card_image" />
         <TextView
             android:id="@+id/card_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Trip Name"
+            android:text="User Name"
             android:gravity="center_horizontal"
             android:textSize="14dp"
             android:layout_below="@id/card_title"
