--- a/app/src/main/res/layout/ongoing_chkpoint_listview.xml
+++ b/app/src/main/res/layout/ongoing_chkpoint_listview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:focusable="true"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -11,14 +11,14 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tripname1"
+        android:id="@+id/chkpoint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/datetime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tripname1"/>
 
-</LinearLayout>
+</RelativeLayout>
