--- a/app/src/main/res/layout/activity_ongoing_checkpoint.xml
+++ b/app/src/main/res/layout/activity_ongoing_checkpoint.xml
@@ -11,5 +11,11 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FINISH TRIP"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/finishtrip"/>
 
 </RelativeLayout>
