--- a/app/src/main/res/layout/fragment_one_list.xml
+++ b/app/src/main/res/layout/fragment_one_list.xml
@@ -8,17 +8,26 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:clickable="true"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/chkpoint"
+        android:id="@+id/title1"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/datetime"
+        android:id="@+id/description1"
+        android:layout_below="@id/title1"
+        android:textColor="@android:color/black"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/chkpoint"/>
+        android:layout_height="wrap_content" />
+
+
+
 
 </RelativeLayout>
