--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,8 +20,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
 
 
@@ -60,6 +59,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:layout_marginLeft="51dp"
                 app:layout_collapseMode="pin"
+                app:titleTextColor="@android:color/white"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_collapseParallaxMultiplier="0.6"
                 >
