--- a/app/src/main/res/layout/fragment_one_list.xml
+++ b/app/src/main/res/layout/fragment_one_list.xml
@@ -1,33 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
+
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:focusable="true"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:clickable="true"
-    android:background="?android:attr/selectableItemBackground"
-    android:orientation="vertical">
+    card_view:cardCornerRadius="4dp"
+    android:padding="10dp"
+    android:layout_margin="5dp">
 
-    <TextView
-        android:id="@+id/title1"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:layout_alignParentTop="true"
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:clickable="true"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/description1"
-        android:layout_below="@id/title1"
-        android:textColor="@android:color/black"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/title1"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:text="Title"
+            android:textColor="@android:color/black"
+            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/description1"
+            android:text="description"
+            android:layout_below="@id/title1"
+            android:textColor="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
+
+
+</android.support.v7.widget.CardView>
