--- a/app/src/main/res/layout/trip_feed_card.xml
+++ b/app/src/main/res/layout/trip_feed_card.xml
@@ -2,9 +2,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view"
+
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="4dp"
+    android:padding="10dp"
     android:layout_margin="5dp">
 
     <RelativeLayout
@@ -16,17 +18,11 @@
         android:background="?android:attr/selectableItemBackground">
 
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/card_image"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:lottie_fileName="star.json"
-            app:lottie_loop="true"
-            app:lottie_autoPlay="true" />
 
 
         <TextView
             android:id="@+id/card_title"
+            android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:background="#ffffff"
@@ -98,17 +94,18 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp">
 
-            <ImageView
+            <TextView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:text="&#xf005;"
                 android:layout_marginRight="6dp"
-                android:src="@drawable/images"
+
                 />
 
             <TextView
-                android:id="@+id/no_of_forks"
+                android:id="@+id/no_of_stars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="300"
@@ -130,17 +127,18 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp">
 
-            <ImageView
+            <TextView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:text="&#xf126;"
                 android:layout_marginRight="6dp"
                 android:src="@drawable/images"
                 />
 
             <TextView
-                android:id="@+id/no_of_stars"
+                android:id="@+id/no_of_forks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="4,000"
