--- a/app/src/main/res/layout/ongoing_chkpoint_listview.xml
+++ b/app/src/main/res/layout/ongoing_chkpoint_listview.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/ll_chklistitem"
     android:focusable="true"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
