--- a/app/src/main/res/layout/ongoing_trips_list_view.xml
+++ b/app/src/main/res/layout/ongoing_trips_list_view.xml
@@ -7,6 +7,7 @@
     android:paddingRight="16dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:background="@color/list_item_normal_state"
     android:clickable="true"
     android:orientation="vertical"
     android:id="@+id/ll_listitem">
