--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -169,7 +169,7 @@
             android:onClick="onClick"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:backgroundTint="@color/colorAccent"
+            android:backgroundTint="#000000"
             android:text="@string/back_arrow"
             android:textSize="25sp"
             android:gravity="center_vertical"
