fixed view trip bug

--- a/app/src/main/res/layout/activity_edit_checkpoint.xml
+++ b/app/src/main/res/layout/activity_edit_checkpoint.xml
@@ -96,7 +96,7 @@
             android:id="@+id/ivdesc"/>
 
     </LinearLayout>
-
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -124,7 +124,7 @@
             android:onClick="Update"
             android:id="@+id/ivmedia"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 
 </RelativeLayout>
