--- a/app/src/main/res/layout/ongoing_trips_list_view.xml
+++ b/app/src/main/res/layout/ongoing_trips_list_view.xml
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_listitem"
+
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:focusable="true"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:background="@color/list_item_normal_state"
-    android:clickable="true"
-    android:orientation="vertical"
-    android:id="@+id/ll_listitem">
+    card_view:cardCornerRadius="4dp"
+    android:padding="30dp"
+    android:layout_margin="2dp">
 
-    <TextView
-        android:id="@+id/tripname1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/description"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tripname1"/>
+        android:focusable="true"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:clickable="true"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tripname1"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:text="Title"
+            android:textColor="@android:color/black"
+            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/description"
+            android:text="description"
+            android:layout_below="@id/tripname1"
+            android:textColor="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+
+
+    </RelativeLayout>
+
+
+</android.support.v7.widget.CardView>
